change the roll up function / finished about me.html

--- a/about-me.html
+++ b/about-me.html
@@ -126,6 +126,7 @@
     <script src="./src/js/dom_elements.js"></script>
     <script src="./src/js/hamburger.js"></script>
     <script src="./src/js/jump_home.js"></script>
+    <script src="./src/js/global-buttons.js"></script>
     <script src="./src/js/loader.js"></script>
 </body>
 </html>
