--- a/index.html
+++ b/index.html
@@ -175,6 +175,7 @@
     <script src="./src/js/hamburger.js"></script>
     <script src="./src/js/jump_home.js"></script>
     <script src="./src/js/scroll.js"></script>
+    <script src="./src/js/global-buttons.js"></script>
     <script src="./src/js/loader.js"></script>
 </body>
 </html>
