--- a/about-me.html
+++ b/about-me.html
@@ -10,6 +10,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <link rel="stylesheet" href="styles/about-me.css">
+
+    <!-- AOS ANIMATIONS-->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js" defer></script>
+    <script src="./src/js/aos.js" defer></script>
 </head>
 <body>
 
@@ -78,17 +83,17 @@
 <!-- ABOUT ME -->
         <section class="about-me_content">
             <header class="about-me_content_header">
-                <h2>About Me</h2>
+                <h2 data-aos="zoom-in">About Me</h2>
 
                 <img src="./pics/Skitterphoto_man.jpg" alt="photographer">
             </header>
             
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error dolores id quae iusto minima? Necessitatibus impedit soluta aliquam accusantium nulla corrupti repellat placeat, sequi iste quod alias fugiat distinctio assumenda?</p>
+            <p data-aos="fade-right">Lorem ipsum dolor sit amet consectetur adipisicing elit. Error dolores id quae iusto minima? Necessitatibus impedit soluta aliquam accusantium nulla corrupti repellat placeat, sequi iste quod alias fugiat distinctio assumenda?</p>
             
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem omnis eaque, dolore perferendis, fugiat et modi ad ipsam sed eligendi nostrum sapiente a officia ex eveniet? Culpa explicabo ratione error. Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem adipisci quisquam, enim qui quas facere. Beatae magnam harum nisi vero sint. Expedita laborum assumenda repellendus perspiciatis temporibus harum vero debitis.
+            <p data-aos="fade-left">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem omnis eaque, dolore perferendis, fugiat et modi ad ipsam sed eligendi nostrum sapiente a officia ex eveniet? Culpa explicabo ratione error. Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem adipisci quisquam, enim qui quas facere. Beatae magnam harum nisi vero sint. Expedita laborum assumenda repellendus perspiciatis temporibus harum vero debitis.
             </p>
 
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error dolores id quae iusto minima? Necessitatibus impedit soluta aliquam accusantium nulla corrupti repellat placeat, sequi iste quod alias fugiat distinctio assumenda?</p>
+            <p data-aos="fade-up">Lorem ipsum dolor sit amet consectetur adipisicing elit. Error dolores id quae iusto minima? Necessitatibus impedit soluta aliquam accusantium nulla corrupti repellat placeat, sequi iste quod alias fugiat distinctio assumenda?</p>
 
         </section>
 
