--- a/credits.html
+++ b/credits.html
@@ -10,6 +10,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <link rel="stylesheet" href="styles/credits.css">
+
+    <!-- AOS ANIMATIONS-->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js" defer></script>
+    <script src="./src/js/aos.js" defer></script>
 </head>
 <body>
 
@@ -88,7 +93,7 @@
 
 
         <!-- Inspiration for this project-->
-            <section class="credits_content_credit-section">
+            <section class="credits_content_credit-section" data-aos="fade-up">
                 <h3>Inspiration to do this Project</h3>
 
                 <a href="https://zerotomastery.io/courses/javascript-projects/" rel="noopener external">
@@ -100,7 +105,7 @@
 
 
         <!-- Inspiration for the UI / UX -->
-            <section class="credits_content_credit-section">
+            <section class="credits_content_credit-section" data-aos="fade-up">
                 <h3>Inspiration for the UI / UX</h3>
 
                 <a href="https://library.elementor.com/nature-photographer/" rel="noopener external">
@@ -110,7 +115,7 @@
 
 
         <!-- Pictures-->
-            <section class="credits_content_credit-section">
+            <section class="credits_content_credit-section" data-aos="fade-up">
                 <h3>The Pictures</h3>
 
                 <a href="https://pixabay.com/de/" rel="noopener external">
@@ -258,8 +263,27 @@
 
             </section>
 
+        <!-- AOS -->
+            <section class="credits_content_credit-section">
+                <h3>In Viewport Animations</h3>
+
+                <a href="https://michalsnik.github.io/aos/" rel="noopener external">
+                    AOS
+                 </a>
+            </section>
+
+        <!-- The Spinner -->
+        <section class="credits_content_credit-section">
+            <h3>The Spinner GIF</h3>
+
+            <a href="https://loading.io/" rel="noopener external">
+                loading.io
+            </a>
+
+        </section>
          
         </section><!-- end credits -->
+
 
 <!-- FOOTER -->
         <footer class="general_footer footer">
