--- a/gallery_nature.html
+++ b/gallery_nature.html
@@ -10,6 +10,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <link rel="stylesheet" href="styles/gallery.css">
+
+     <!-- AOS ANIMATIONS-->
+     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js" defer></script>
+     <script src="./src/js/aos.js" defer></script>
 </head>
 <body>
 
@@ -79,7 +84,7 @@
         <section class="gallery_gallery">
             <header class="gallery_gallery_header">
                 <img src="./pics/Radfotosonn _daylily.jpg" alt="Afrikanischer Löwe">
-                <h2>Nature</h2>
+                <h2 data-aos="zoom-in">Nature</h2>
             </header>
 
             <!-- Thumbnails -->
