--- a/gallery_wildlife.html
+++ b/gallery_wildlife.html
@@ -10,6 +10,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <link rel="stylesheet" href="styles/gallery.css">
+
+    <!-- AOS ANIMATIONS-->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js" defer></script>
+    <script src="./src/js/aos.js" defer></script>
 </head>
 <body>
 
@@ -79,27 +84,27 @@
         <section class="gallery_gallery">
             <header class="gallery_gallery_header">
                 <img src="./pics/IanZA _african-lion.jpg" alt="Afrikanischer Löwe">
-                <h2>Wildlife</h2>
+                <h2 data-aos="zoom-in">Wildlife</h2>
             </header>
 
             <!-- Thumbnails -->
             <div class="gallery_gallery_image-container">
-                <img src="./pics/12019_sunset.jpg" alt="Sonnenuntergang">
-                <img src="./pics/Budhadityam2321_dragonfly.jpg" alt="Libelle">
-                <img src="./pics/Chraecker_owl.jpg" alt="Eule">
-                <img src="./pics/huskyherz_dalmatian.jpg" alt="Dalmatiner">
-                <img src="./pics/IanZA _african-lion.jpg" alt="Löwe">
-                <img src="./pics/IanZA_leopard.jpg" alt="Leopard">
-                <img src="./pics/Josch13_bird-of-paradise-flower.jpg" alt="Paradies Blume">
-                <img src="./pics/Mhy_flower.jpg" alt="Blüte">
-                <img src="./pics/moshehar_nature.jpg" alt="Sukkulente">
-                <img src="./pics/Mylene2401_leaf.jpg" alt="Blatt">
-                <img src="./pics/Mylene2401_petal.jpg" alt="Blütenblatt">
-                <img src="./pics/PublicDomainPictures _background.jpg" alt="Kiwi">
-                <img src="./pics/Radfotosonn _daylily.jpg" alt="Lilie">
-                <img src="./pics/RandyRMM_animal.jpg" alt="Hund">
-                <img src="./pics/Skitterphoto_man.jpg" alt="Fotograf">
-                <img src="./pics/Waratharn_fern.jpg" alt="Farn">
+                <img src="./pics/12019_sunset.jpg" alt="Sonnenuntergang" >
+                <img src="./pics/Budhadityam2321_dragonfly.jpg" alt="Libelle" >
+                <img src="./pics/Chraecker_owl.jpg" alt="Eule" >
+                <img src="./pics/huskyherz_dalmatian.jpg" alt="Dalmatiner" >
+                <img src="./pics/IanZA _african-lion.jpg" alt="Löwe" >
+                <img src="./pics/IanZA_leopard.jpg" alt="Leopard" >
+                <img src="./pics/Josch13_bird-of-paradise-flower.jpg" alt="Paradies Blume" > 
+                <img src="./pics/Mhy_flower.jpg" alt="Blüte" >
+                <img src="./pics/moshehar_nature.jpg" alt="Sukkulente" >
+                <img src="./pics/Mylene2401_leaf.jpg" alt="Blatt" >
+                <img src="./pics/Mylene2401_petal.jpg" alt="Blütenblatt" >
+                <img src="./pics/PublicDomainPictures _background.jpg" alt="Kiwi" >
+                <img src="./pics/Radfotosonn _daylily.jpg" alt="Lilie" >
+                <img src="./pics/RandyRMM_animal.jpg" alt="Hund" >
+                <img src="./pics/Skitterphoto_man.jpg" alt="Fotograf" >
+                <img src="./pics/Waratharn_fern.jpg" alt="Farn" >
             </div>
 
             <!-- Modal Box with bigger images-->
