--- a/credits.html
+++ b/credits.html
@@ -237,7 +237,7 @@
             </section>
 
         <!-- The Clapping Hands -->
-            <section class="credits_content_credit-section">
+            <section class="credits_content_credit-section" data-aos="fade-up">
                 <h3>The Clapping Hands</h3>
 
                 <a href="https://giphy.com/" rel="noopener external">
@@ -254,7 +254,7 @@
             </section>
 
         <!-- The Text Shaking -->
-            <section class="credits_content_credit-section">
+            <section class="credits_content_credit-section" data-aos="fade-up">
                 <h3>The Text Shaking Inspiration</h3>
 
                 <a href="https://codepen.io/peralP/pens/public" rel="noopener external">
@@ -264,7 +264,7 @@
             </section>
 
         <!-- AOS -->
-            <section class="credits_content_credit-section">
+            <section class="credits_content_credit-section" data-aos="fade-up">
                 <h3>In Viewport Animations</h3>
 
                 <a href="https://michalsnik.github.io/aos/" rel="noopener external">
@@ -273,7 +273,7 @@
             </section>
 
         <!-- The Spinner -->
-        <section class="credits_content_credit-section">
+        <section class="credits_content_credit-section" data-aos="fade-up">
             <h3>The Spinner GIF</h3>
 
             <a href="https://loading.io/" rel="noopener external">
