fix credits scrollbar bug on mobile

--- a/credits.html
+++ b/credits.html
@@ -273,7 +273,7 @@
             </section>
 
         <!-- The Spinner -->
-        <section class="credits_content_credit-section" data-aos="fade-up">
+        <section class="credits_content_credit-section">
             <h3>The Spinner GIF</h3>
 
             <a href="https://loading.io/" rel="noopener external">
